create/update person/organization
